--- a/main-service/app/templates/registration.html
+++ b/main-service/app/templates/registration.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div id="login-body">
+<div id="registration-body">
     {% include "messageblock.html" %}
     <form action="" method="POST" class="login-form">
         {{ form.hidden_tag() }}
