--- a/main-service/app/templates/login.html
+++ b/main-service/app/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "baselayout.html" %}
 {% block content %}
 <div id="login-body">
     {% include "messageblock.html" %}
