--- a/main-service/app/templates/eventform.html
+++ b/main-service/app/templates/eventform.html
@@ -1,40 +1,54 @@
 {% extends "userlayout.html" %}
 {% block content %}
-<div>
-    {% include "messageblock.html" %}
-    <form id="event-form" action="{{  url_for('main.addeventsubmit') }}" method="POST">
-        {{ form.hidden_tag() }}
-        <div>
-            {{ form.title.label }}
-            <br>
-            {{ form.title() }}
-        </div>
-        <div>
-            {{ form.description.label }}
-            <br>
-            {{ form.description() }}
-        </div>
-        <div>
-            {{ form.address.label }}
-            <br>
-            {{ form.address() }}
-        </div>
-        <div>
-            {{ form.date.label }}
-            <br>
-            {{ form.date() }}
-        </div>
-        <div>
-            {{ form.time.label }}
-            <br>
-            {{ form.time() }}
-        </div>
-        <div>
-            {{ form.travel_method.label }}
-            <br>
-            {{ form.travel_method() }}
-        </div>
-        <div>{{ form.submit() }}</div>
-    </form>
-</div>
+{% include "messageblock.html" %}
+<form id="event-form" action="{{  url_for('main.addeventsubmit') }}" method="POST">
+    {{ form.hidden_tag() }}
+    <div>
+        {{ form.title.label }}
+        <br>
+        {{ form.title() }}
+    </div>
+    <div>
+        {{ form.description.label }}
+        <br>
+        {{ form.description() }}
+    </div>
+    <div>
+        {{ form.address.label }}
+        <br>
+        {{ form.address() }}
+    </div>
+    <div>
+        {{ form.date.label }}
+        <br>
+        {{ form.date() }}
+    </div>
+    <div>
+        {{ form.time.label }}
+        <br>
+        {{ form.time() }}
+    </div>
+    <div>
+        {{ form.travel_method.label }}
+        <br>
+        {{ form.travel_method() }}
+    </div>
+    <div>{{ form.submit() }}</div>
+</form>
+{% endblock %}
+{% block scripts %}
+<script>
+// Initialise place search and autocomplete
+var placeSearch, autocomplete
+
+// Initilise autocomplete
+function initAutocomplete() {
+  // Create the autocomplete object
+  autocomplete = new google.maps.places.Autocomplete(
+      document.getElementById('address'), {types: ['geocode']});
+  // Restrict the set of fields that are returned
+  autocomplete.setFields(['address_component']);
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCd4mRC2IuplYvR6O4U8XRr2VHsnk8LGNI&libraries=places&callback=initAutocomplete" defer async></script>
 {% endblock %}
