--- a/main-service/app/templates/baselayout.html
+++ b/main-service/app/templates/baselayout.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
     </head>
     <body>
-        {% block content %}{% endblock %}
+        <div id="main-content">
+            {% block content %}{% endblock %}
+        </div>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
