--- a/main-service/app/templates/userlayout.html
+++ b/main-service/app/templates/userlayout.html
@@ -9,11 +9,15 @@
         <div id="navigation">
             <ul>
                 <li><a href="{{ url_for('main.index') }}">Home</a></li>
+                <li><a href="{{ url_for('main.userprofile') }}">Profile</a></li>
                 <li><a href="{{ url_for('main.eventlist') }}">Events</a></li>
             </ul>
         </div>
-        {% block content %}{% endblock %}
+        <div id="main-content">
+            {%- block content %}{% endblock -%}
+        </div>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        {%- block scripts %}{% endblock -%}
     </body>
 </html>
