--- a/main-service/app/templates/eventlist.html
+++ b/main-service/app/templates/eventlist.html
@@ -1,15 +1,52 @@
 {% extends "userlayout.html" %}
 {% block content %}
 {% include "messageblock.html" %}
-{% for id in events %}
-    <div class="event-item">
-        <h3>{{ events[id].title }}</h3>
-        <p>{{ events[id].description }}</p>
-        <p>{{ events[id].address }}</p>
-        <p>{{ events[id].time }}</p>
-        <p>{{ events[id].travel_method }}</p>
-    </div>
-{% endfor %}
-{% set create_event_url = url_for('main.addevent') %}
-<button onclick="location.href='{{ create_event_url }}';">Create new event</button>
+<div id="event-list">
+    {% for event in events %}
+        <div id="event-{{ event.id }}" class="event-item" data-id="{{ event.id }}">
+            <h3 class="event-title">{{ event.title }}</h3>
+            <div class="event-content">
+                <p>Description: {{ event.description }}</p>
+                <p>Address: {{ event.address }}</p>
+                <p>Start Time: {{ event.start_time }}</p>
+                <p>End Time: {{ event.end_time }}</p>
+                {% if event.travel_method == "driving" %} <p>Travel method: Driving</p>{% endif %}
+                {% if event.travel_method == "walking" %} <p>Travel method: Walking</p>{% endif %}
+                {% if event.travel_method == "transit" %} <p>Travel method: Transit</p>{% endif %}
+                {% if event.travel_method == "bicycling" %} <p>Travel method: Cycling</p>{% endif %}
+                <a href="https://www.google.com/maps/dir/?api=1&origin=&destination={{ event.address }}&travelmode={{ event.travel_method }}">Directions from current location.</a><br>
+                {% if loop.previtem is defined %}
+                    <a href="https://www.google.com/maps/dir/?api=1&origin={{ loop.previtem.address }}&destination={{ event.address }}&travelmode={{ event.travel_method }}">Directions from previous event location.</a><br>
+                {% endif %}
+                {% set delete_event_url = url_for('main.deleteevent', id=event.id) %}
+                <button class="btn btn-danger" onclick="DeleteEvent('{{ delete_event_url }}');">Delete event</button>
+            </div>
+        </div>
+    {% endfor %}
+</div>
+<div id="event-list-options">
+    {% set create_event_url = url_for('main.addevent') %}
+    <button class="btn btn-success" onclick="location.href='{{ create_event_url }}';">Create new event</button>
+    {% set list_unstarted_url = url_for('main.eventlist') %}
+    <button class="btn btn-success" onclick="location.href='{{ list_unstarted_url }}';">List unstarted events</button>
+    {% set list_all_url = url_for('main.eventlist')+"?list=all" %}
+    <button class="btn btn-success" onclick="location.href='{{ list_all_url }}';">List all events</button>
+</div>
+{% endblock %}
+{% block scripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script>
+// Accordian animation for each event
+$(".event-item").accordion({
+    collapsible: true,
+    active: true
+});
+// Delete event after confirmation
+function DeleteEvent(deleteLink)
+{
+    confirmation = confirm("Are you sure you want to delete this event?")
+    if(confirmation) window.location.href=deleteLink;
+    else return;
+}
+</script>
 {% endblock %}
