Added warnings display to each event and made general improvemets

--- a/main-service/app/templates/baselayout.html
+++ b/main-service/app/templates/baselayout.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
     </head>
     <body>
-        <div id="main-content">
+        <div id="base-content">
             {% block content %}{% endblock %}
         </div>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
