--- a/main-service/app/templates/registration.html
+++ b/main-service/app/templates/registration.html
@@ -1,7 +1,7 @@
 {% extends "baselayout.html" %}
 {% block content %}
 {% include "messageblock.html" %}
-<form action="" method="POST" class="login-form">
+<form action="" method="POST" class="registration-form">
     {{ form.hidden_tag() }}
     <div>
         {{ form.username.label }}
