--- a/main-service/app/templates/userlayout.html
+++ b/main-service/app/templates/userlayout.html
@@ -13,7 +13,7 @@
                 <li><a href="{{ url_for('main.eventlist') }}">Schedule</a></li>
             </ul>
         </div>
-        <div id="main-content">
+        <div id="user-content">
             <div id="loading-overlay"><span>Loading...</span></div>
             {%- block content %}{% endblock -%}
         </div>
