--- a/main-service/app/static/css/main.css
+++ b/main-service/app/static/css/main.css
@@ -1,3 +1,66 @@
+/* Base content base */
+#base-content
+{
+  position: relative;
+}
+
+/* Landing page */
+#landing-buttons-container
+{
+  position: fixed;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+#landing-buttons-container button
+{
+  background-color: #333;
+  display: block;
+  width: 128px;
+  height: 64px;
+  margin: 20px;
+  border: 0;
+  border-radius: 20px;
+  color: white;
+  font-weight: 700;
+}
+#landing-buttons-container button:active
+{
+  background-color: #333;
+}
+
+/* Login page */
+.login-form
+{
+  position: fixed;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.login-form div
+{
+  padding: 10px;
+}
+
+/* Registration page */
+.registration-form
+{
+  position: fixed;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.registration-form div
+{
+  padding: 10px;
+}
+
 /* Navigation bar */
 #navigation
 {
@@ -29,13 +92,13 @@
   background-color: #111;
 }
 
-/* Main content base */
-#main-content
+/* Main user content base */
+#user-content
 {
   position: relative;
   top: 50px
 }
-h1, h2, h3
+#user-content h1, h2, h3
 {
   margin: 0;
 }
@@ -88,6 +151,10 @@ h1, h2, h3
 #event-list-options
 {
   padding: 10px;
+}
+.warnings-container
+{
+  display: block;
 }
 
 /* Event form */
