--- a/main-service/app/templates/messageblock.html
+++ b/main-service/app/templates/messageblock.html
@@ -2,10 +2,10 @@
     {% if messages %}
         {% for category, message in messages %}
             {% if category == "success" %}    
-                <div class="flash-success">{{ message }}</div>
+                <div class="alert alert-success" role="alert">{{ message }}</div>
             {% endif %}
             {% if category == "error" %}    
-                <div class="flash-error">{{ message }}</div>
+                <div class="alert alert-danger" role="alert">{{ message }}</div>
             {% endif %}
         {% endfor %}
     {% endif %}
